@@ -80,13 +80,16 @@ Core and Builtins
 Library
 -------
 
+- Issue #12124: zipimport doesn't keep a reference to zlib.decompress() anymore
+  to be able to unload the module.
+
 - Issue #11088: don't crash when using F5 to run a script in IDLE on MacOSX
   with Tk 8.5.
 
 - Issue #10154, #10090: change the normalization of UTF-8 to "UTF-8" instead
   of "UTF8" in the locale module as the latter is not supported MacOSX and OpenBSD.
 
-- Issue #9516: avoid errors in sysconfig when MACOSX_DEPLOYMENT_TARGET is 
+- Issue #9516: avoid errors in sysconfig when MACOSX_DEPLOYMENT_TARGET is
   set in shell.
 
 - Issue #12050: zlib.decompressobj().decompress() now clears the unconsumed_tail
